--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -1,3 +1,6 @@
 <h2> <%= @user.name %>'s Dashboard</h2>
 
 <%= button_to "Discover Movies", "/user/#{@user.id}/discover", method: :get %>
+
+<hr>
+<h3>Viewing Parties</h3>
