--- a/app/views/discover/show.html.erb
+++ b/app/views/discover/show.html.erb
@@ -3,6 +3,6 @@
 <%= button_to "Find Top Rated Movies", "/users/#{@user.id}/movies", method: :get %><br>
 
 <%= form_with url: "/users/#{@user.id}/movies", method: :get, local: true do |form| %>
-  <%= form.text_field :movie_title, placeholder: "Search by movie title" %>
+  <%= form.text_field :original_title, placeholder: "Search by movie title" %>
   <%= form.submit "Find Movies"%>
 <% end %>
