--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,16 +1,18 @@
+<%= button_to "Discover Page", discover_show_path(@user), method: :get %><br>
 
+<%= button_to "Create Viewing Party for #{@movie[:original_title]}", new_viewing_party_path(@user, @movie) %>
 
 <h1> <%= @movie[:original_title] %></h1>
 
 <h4>Vote Average: <%= @movie[:vote_average] %><br></h4>
-<h4>Runtime: <%= @hours %>h <%= @minutes %>m<br></h4>
-<h4>Genre:<% @movie[:genres].each do |genre| %>
+<h4>Runtime: <%= @hours %> hr <%= @minutes %> min<br></h4>
+<h4>Genre(s):<% @movie[:genres].each do |genre| %>
 <%= genre[:name] %>,
 <% end %><br></h4>
 <h4>Overview: <%= @movie[:overview] %><br></h4>
 <h4>Cast: <% @movie_cast.each do |movie| %>
   <li><%= movie[:name] %> as <%= movie[:character] %></li>
-<% end %><br></h4>
+<% end %><br></h4><hr>
 <h4>Reviews: <%= @movie_reviews[:total_results] %><br></h4>
 <% @movie_reviews[:results].each do |movie| %>
 <li>Author: <%= movie[:author] %></li>
