--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <h2> <%= @user.name %>'s Dashboard</h2>
 
-<%= button_to "Discover Movies", "/users/#{@user.id}/discover", method: :get %>
+<%= button_to "Discover Movies", discover_show_path(@user), method: :get %>
 
 <hr>
 <h3>Viewing Parties</h3>
