--- a/app/views/discover/show.html.erb
+++ b/app/views/discover/show.html.erb
@@ -3,6 +3,6 @@
 <%= button_to "Find Top Rated Movies", movie_index_path(@user), method: :get %><br>
 
 <%= form_with url: movie_index_path(@user), method: :get, local: true do |form| %>
-  <%= form.text_field :original_title, placeholder: "Search by movie title" %>
+  <%= form.text_field :title, placeholder: "Search by movie title" %>
   <%= form.submit "Find Movies"%>
 <% end %>
