--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,6 +2,6 @@
 
 <div id="topmovies">
   <% @movies.each do |movie| %>
-    <%= link_to movie[:original_title], movie_show_path(movie) %> Vote Average: <%= movie[:vote_average] %><br>
+    <%= link_to movie.title, movie_show_path(movie.id) %> Vote Average: <%= movie.vote_average %><br>
   <% end %>
 </div>
