--- a/app/views/party/new.html.erb
+++ b/app/views/party/new.html.erb
@@ -1,10 +1,10 @@
 <%= button_to "Discover Page", discover_show_path(@user), method: :get %>
 
-<h1>Create a Movie Party for <%= "#{@movie[:original_title]}" %></h1>
+<h1>Create a Movie Party for <%= "#{@movie.title}" %></h1>
 
 <h3>Viewing Party Details</h3>
 <%= form_with url: new_viewing_party_path(@user, @movie), local: true do |form| %>
-  Movie Title: <%= @movie[:original_title] %><br>
+  Movie Title: <%= @movie.title %><br>
   <%= form.label "Duration of Party:" %>
   <%= form.number_field :movie_duration, value: @movie[:runtime], required: true, min: @movie[:runtime] %><br>
   <%= form.label "Day:" %>
