--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -6,8 +6,8 @@
 
 <h4>Vote Average: <%= @movie.vote_average %><br></h4>
 <h4>Runtime: <%= @hours %> hr <%= @minutes %> min<br></h4>
-<h4>Genre(s):<% @movie.genres.each do |genre| %>
-<%= genre.name %>,
+<h4>Genre(s):<% @movie.movie_genres.each do |genre|%>
+  <%= genre %>,
 <% end %><br></h4>
 <h4>Overview: <%= @movie.overview %><br></h4>
 <h4>Cast: <% @movie_cast.each do |movie| %>
