--- a/app/views/party/new.html.erb
+++ b/app/views/party/new.html.erb
@@ -6,7 +6,7 @@
 <%= form_with url: new_viewing_party_path(@user, @movie), local: true do |form| %>
   Movie Title: <%= @movie.title %><br>
   <%= form.label "Duration of Party:" %>
-  <%= form.number_field :movie_duration, value: @movie[:runtime], required: true, min: @movie[:runtime] %><br>
+  <%= form.number_field :movie_duration, value: @movie.runtime, required: true, min: @movie.runtime %><br>
   <%= form.label "Day:" %>
   <%= form.date_field :date %><br>
   <%= form.label "Start Time:" %>
