Add viewing party details to show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,3 +4,8 @@
 
 <hr>
 <h3>Viewing Parties</h3>
+<% @parties.each do |party| %>
+  <%= party.name %>
+  <%= party.date %>
+  <%= party.time %>
+<% end %>
