--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,11 @@
 <hr>
 <h3>Viewing Parties</h3>
 <% @parties.each do |party| %>
+  <% @movies.each do |movie| %>
+    <% if party.movie_id == movie.id  %>
+      <img src=<%= movie.image_url %>>
+    <% end %>
+  <% end %>
   <%= party.name %>
   <%= party.date %>
   <%= party.time %>
