--- a/app/views/party/new.html.erb
+++ b/app/views/party/new.html.erb
@@ -5,6 +5,7 @@
 <h3>Viewing Party Details</h3>
 <%= form_with url: new_viewing_party_path(@user, @movie.id), local: true, method: :post do |form| %>
   Movie Title: <%= @movie.title %><br>
+  <%= form.hidden_field :img_url, value: @movie.image_url %>
   <%= form.hidden_field :movie_id, value: @movie.id %>
   <%= form.hidden_field :name, value: @movie.title %>
   <%= form.label "Duration of Party:" %>
