--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,8 +9,8 @@
     <% if party.movie_id == movie.id  %>
       <img src=<%= movie.image_url %>>
     <% end %>
-  <% end %>
-  <%= party.name %>
-  <%= party.date %>
-  <%= party.time %>
+  <% end %><br>
+  <h4><%= party.name %></h4>
+  Party Date: <%= party.date %><br>
+  Party Time: <%= party.time %><br><hr>
 <% end %>
