Add styling for show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,5 +12,6 @@
   <% end %><br>
   <h4><%= party.name %></h4>
   Party Date: <%= party.date %><br>
-  Party Time: <%= party.time %><br><hr>
+  Party Time: <%= party.time %><br>
+  Status: <hr>
 <% end %>
