--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,5 +13,9 @@
   <h4><%= party.name %></h4>
   Party Date: <%= party.date.strftime('%B %-d, %Y') %><br>
   Party Time: <%= party.time.strftime('%I:%M %P') %><br>
-  Status: <%= @user.status %><hr>
+  Status: <% if party.user_id == @user.id %>
+    hosting
+  <% else %>
+    invited
+  <% end %><br><hr>
 <% end %>
