render flash message for missing data

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
 
   <body>
     <%= link_to 'Home', "/" %>
+    <% flash.each do |name, msg| %>
+      <div class="alert alert-warning">
+        <strong><%= content_tag :div, msg, class: name %></strong>
+      </div>
+    <% end %>
     <%= yield %>
 
     <footer>
