refactor movie poro and view

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -5,10 +5,8 @@
 <h1> <%= @movie.title %></h1>
 <img src=<%= @movie.image_url %>>
 <h4>Vote Average: <%= @movie.vote_average %><br></h4>
-<h4>Runtime: <%= @hours %> hr <%= @minutes %> min<br></h4>
-<h4>Genre(s):<% @movie.movie_genres.each do |genre|%>
-  <%= genre %>,
-<% end %><br></h4>
+<h4>Runtime: <%= @movie.formatted_runtime %> min<br></h4>
+<h4>Genre(s): <%= @movie.movie_genres.join(", ") %><br></h4>
 <h4>Overview: <%= @movie.overview %><br></h4>
 <h4>Cast: <% @movie_cast.each do |movie| %>
   <li><%= movie[:name] %> as <%= movie[:character] %></li>
