--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,9 +3,9 @@
   <%= form.text_field :name, required: true %><br>
   <%= form.label :email %>
   <%= form.text_field :email, required: true %><br>
-  <%= form.label :password, "Password:" %>
-  <%= form.password_field :password %><br>
-  <%= form.label :password_confirmation, "Password Confirmation:" %>
-  <%= form.password_field :password_confirmation %><br>
+  <%= form.label :password %>
+  <%= form.password_field :password, required: true  %><br>
+  <%= form.label :password_confirmation %>
+  <%= form.password_field :password_confirmation, required: true  %><br>
   <%= form.submit %>
 <% end %>
