--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,10 @@
-  <h1>Welcome to Viewing Party!</h1>
+  <h1>Welcome to Viewing Party Lite!</h1>
 
   <p>Viewing Party allows you to explore movies and create a viewing party event for you and your friends to watch a movie together.</p>
 
-  <%= link_to "New to Viewing Party? Register Here", register_path %>
+<% if session[:user_id] %>
+ <%= link_to "Log Out", logout_path, method: :delete %>
+<% else %>
+  <%= link_to "Log In", login_path %><br>
+  <%= link_to "New to Viewing Party? Register Here", register_path %><br>
+<% end %>
